--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
 	<title>my blog</title>
 <body>
-	fcqmfly
+	<p>fcqmfly</p>
+	<a href = "/home">Home</a>
+	<a href = "/archive">Archive</a>
+	<a href = "/photos">Photos</a>
+	<a href = "/links">Links</a>
+	<a href = "/about">About</a>
+	<hr>
 </body>
 </html>
