--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<a href = "/archive">Archive</a>
 	<a href = "/photos">Photos</a>
 	<a href = "/links">Links</a>
-	<a href = "/about">About</a>
+	<a href = "/about.html">About</a>
 	<hr>
 </body>
 </html>
