--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-<head>
-	<title>my blog</title>
-<body>
-	<p>fcqmfly</p>
-	<a href = "/home">Home</a>
-	<a href = "/archive">Archive</a>
-	<a href = "/photos">Photos</a>
-	<a href = "/links">Links</a>
-	<a href = "/about.html">About</a>
-	<hr>
-	{{ site.time }}
-</body>
-</html>
+{% extends '/_include/footer.html' %}
