--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-{% extends '/_include/footer.html' %}
-
-{% for each in range(4) %}
-  each
-{% endfor %}
-<ul>
-{% for post in site.posts  %}
-	<li style=" text-align:left"> <a href={{post.url  }}>{{ post.title  }} </a> <span class='date' style="float:right"  >{{post.date | date_to_string}}</span>
-{% endfor %}
-
-</ul>
+<!doctype html>
+<html lang="zh-cn">
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/JavaScript" src="js/jquery-2.1.0.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/Chart.js"></script>
+	<script src="less.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+</head>
+<body>
+<!-- 导航菜单 -->
+  <ul class="nav nav-pills">
+    <li class="active"><a href="#">Home</a></li>
+    <li><a href="#">Profile</a></li>
+    <li><a href="#">Messages</a></li>
+  </ul>
+</body>
+</html>
