--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
 	<script type="text/JavaScript" src="js/jquery-2.1.0.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/Chart.js"></script>
-	<script src="less.js" type="text/javascript"></script>
+	<script src="js/less.js" type="text/javascript"></script>
+    <script src="js/headroom.js"></script>
+    <script src="js/my_script.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
 <!-- 导航菜单 -->
+<div class="container">
   <ul class="nav nav-pills">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Profile</a></li>
     <li><a href="#">Messages</a></li>
   </ul>
+</div>
 </body>
 </html>
